--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ MG_API_TISTORY_REDIRECT_URL="your-tistory-callback-url"
 MG_API_TISTORY_GRANT_TYPE="authorization_code"
 MG_API_TISTORY_OUTPUT_TYPE="json"
 MG_API_TISTORY_DATA_PATH="/Users/mingyukim/Desktop/tisyory/mg-next/src/data/"
+
+MG_API_NAVER_CLIENT_ID="your-naver-client-id"
+MG_API_NAVER_CLIENT_SECRET="your-naver-client-secret-key"
+MG_API_NAVER_DATA_PATH="/Users/mingyukim/Desktop/tisyory/wordgame/src/data/"
