--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-simplexml": "*",
+        "google/apiclient": "^2.15.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "mingyukim/php-kafka": "^0.22",
-      "ext-simplexml": "*"
+        "mingyukim/php-kafka": "^0.22"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
